src/objects/Dynamic_related_list_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Dynamic_related_list__c</fullName>
        <label>Dynamic related list</label>
        <referenceTo>Dynamic_related_list__mdt</referenceTo>
        <relationshipLabel>Dynamic related list - Fields</relationshipLabel>
        <relationshipName>Dynamic_related_list_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>navigateToRegister__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Navigate to record</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic related list - Field</label>
    <pluralLabel>Dynamic related list - Fields</pluralLabel>
</CustomObject>